# cmvision

./: CMakeLists.txt  README.md  colorgui.launch
config/: colors.txt
launch/: cmvision.launch  cmvision_stereo.launch  cmvision_test.launch  colorgui.launch  colorgui_stereo.launch  usb_cam.launch
scripts/: blob_image.py  blob_listener.py
src/: cmvision.cc  cmvision.h  cmvision_color_blob_finder.cpp  color_gui.cpp
src/nodes/: cmvision_color_blob_finder.cpp  color_gui.cpp  color_gui.h  main.cpp
